tests/errors/variant_flow/variant_with_inhabited_struct_payload_still_reachable.sim

            struct Fine: Copy + Drop + Move { x: i64 }
            enum E: Copy + Drop { A: i64 B: Fine }
            fn f(e: E, out: &out i64) {
              entry:
                switchEnum(e) [A: a_arm, B: b_arm]
              a_arm:
                out.* = copy e as A;
                return
              b_arm:
                unreachable
            }
            