tests/errors/variant_flow/variant_with_inhabited_struct_payload_still_reachable.err.expected
error: at 6:17: [VF-SwitchArmFalselyUnreachable] In function 'f', block 'entry': switchEnum arm for variant 'B' claims unreachable but variant is reachable at this point
   |
 6 |                 switchEnum(e) [A: a_arm, B: b_arm]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
